// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentPage .Markup <Column> renders 1`] = `
<DocumentFragment>
  <div
    class="column"
  >
    INSIDE COLUMN
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Column> renders: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Column> renders: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Column> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Column> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Columns> renders 1`] = `
<DocumentFragment>
  <div
    class="columns"
  >
    INSIDE COLUMNS
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Columns> renders: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Columns> renders: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Columns> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Columns> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Do> renders 1`] = `
<DocumentFragment>
  <div
    class="column"
  >
    <div
      class="do-header"
    >
      <h2>
        Do
      </h2>
      <mock-checkicon />
    </div>
    <div
      class="do-section"
    >
      THINGS TO DO
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Do> renders: CheckIcon props 1`] = `{}`;

exports[`ContentPage .Markup <Do> renders: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Do> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Do> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Dont> renders 1`] = `
<DocumentFragment>
  <div
    class="column"
  >
    <div
      class="dont-header"
    >
      <h2>
        Don't
      </h2>
      <mock-crossicon />
    </div>
    <div
      class="dont-section"
    >
      DON'T DO THIS
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Dont> renders: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Dont> renders: CrossIcon props 1`] = `{}`;

exports[`ContentPage .Markup <Dont> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Dont> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Fail> renders 1`] = `
<DocumentFragment>
  <div
    class="column"
  >
    <div
      class="fail-header"
    >
      <mock-crossicon />
       
      <h3>
        Fail
      </h3>
    </div>
    <div
      class="fail-section"
    >
      I FAILED :(
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Fail> renders: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Fail> renders: CrossIcon props 1`] = `{}`;

exports[`ContentPage .Markup <Fail> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Fail> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Highlight> renders 1`] = `
<DocumentFragment>
  <span
    class="highlight"
  >
    HIGHLIGHTED
  </span>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Highlight> renders: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Highlight> renders: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Highlight> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Highlight> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <HyperLink> renders 1`] = `<DocumentFragment />`;

exports[`ContentPage .Markup <HyperLink> renders: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <HyperLink> renders: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <HyperLink> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <HyperLink> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Include> renders 1`] = `
<DocumentFragment>
  <div>
    INCLUDE
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Include> renders: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Include> renders: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Include> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Include> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Inline> renders 1`] = `
<DocumentFragment>
  <div
    class="content-inline"
  >
    INLINED
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Inline> renders: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Inline> renders: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Inline> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Inline> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <LandmarkLegend> renders 1`] = `
<DocumentFragment>
  <span
    class="landmarks-legend main-landmark"
  >
    TEST
  </span>
</DocumentFragment>
`;

exports[`ContentPage .Markup <LandmarkLegend> renders 2`] = `
<DocumentFragment>
  <div
    class="column"
  >
    <div
      class="do-header"
    >
      <h2>
        Do
      </h2>
      <mock-checkicon />
    </div>
    <div
      class="do-section"
    >
      THINGS TO DO
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <LandmarkLegend> renders: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <LandmarkLegend> renders: CheckIcon props 2`] = `{}`;

exports[`ContentPage .Markup <LandmarkLegend> renders: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <LandmarkLegend> renders: CrossIcon props 2`] = `undefined`;

exports[`ContentPage .Markup <LandmarkLegend> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <LandmarkLegend> renders: HelmetWrapper props 2`] = `undefined`;

exports[`ContentPage .Markup <LandmarkLegend> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <LandmarkLegend> renders: NewTabLink props 2`] = `undefined`;

exports[`ContentPage .Markup <Links> renders with many links 1`] = `
<DocumentFragment>
  <div
    class="content-hyperlinks"
  >
    <mock-newtablink
      href="about:blank"
    >
      One
    </mock-newtablink>
    <mock-newtablink
      href="about:blank"
    >
      Two
    </mock-newtablink>
    <mock-newtablink
      href="about:blank"
    >
      Three
    </mock-newtablink>
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Links> renders with many links: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Links> renders with many links: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Links> renders with many links: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Links> renders with many links: NewTabLink props 1`] = `
{
  "children": "One",
  "href": "about:blank",
  "onClick": [Function],
}
`;

exports[`ContentPage .Markup <Links> renders with one link 1`] = `
<DocumentFragment>
  <div
    class="content-hyperlinks"
  >
    <mock-newtablink
      href="about:blank"
    >
      One
    </mock-newtablink>
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Links> renders with one link: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Links> renders with one link: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Links> renders with one link: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Links> renders with one link: NewTabLink props 1`] = `
{
  "children": "One",
  "href": "about:blank",
  "onClick": [Function],
}
`;

exports[`ContentPage .Markup <Links> renders with text 1`] = `
<DocumentFragment>
  <div
    class="content-hyperlinks"
  >
    Some text
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Links> renders with text: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Links> renders with text: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Links> renders with text: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Links> renders with text: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Pass> renders 1`] = `
<DocumentFragment>
  <div
    class="column"
  >
    <div
      class="pass-header"
    >
      <mock-checkicon />
       
      <h3>
        Pass
      </h3>
    </div>
    <div
      class="pass-section"
    >
      I PASSED :)
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Pass> renders: CheckIcon props 1`] = `{}`;

exports[`ContentPage .Markup <Pass> renders: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Pass> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Pass> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <PassFail> renders with example headers 1`] = `
<DocumentFragment>
  <div
    class="pass-fail-grid"
  >
    <div
      class="fail-section"
    >
      <div
        class="fail-header"
      >
        <mock-crossicon />
         
        <h3>
          Fail
        </h3>
      </div>
      <p>
        I FAILED :(
      </p>
    </div>
    <div
      class="fail-example"
    >
      <div
        class="code-example"
      >
        <div
          class="code-example-title"
        >
          <h4>
            How I failed
          </h4>
        </div>
        <div
          class="code-example-code"
        >
          <div
            class="insights-code"
          >
            This is the failure 
            <span
              class="highlight"
            >
              example
            </span>
            .
          </div>
        </div>
      </div>
    </div>
    <div
      class="pass-section"
    >
      <div
        class="pass-header"
      >
        <mock-checkicon />
         
        <h3>
          Pass
        </h3>
      </div>
      <p>
        I PASSED!
      </p>
    </div>
    <div
      class="pass-example"
    >
      <div
        class="code-example"
      >
        <div
          class="code-example-title"
        >
          <h4>
            How I 
            <b>
              passed
            </b>
          </h4>
        </div>
        <div
          class="code-example-code"
        >
          <div
            class="insights-code"
          >
            This is the passing 
            <span
              class="highlight"
            >
              example
            </span>
            .
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <PassFail> renders with example headers: CheckIcon props 1`] = `{}`;

exports[`ContentPage .Markup <PassFail> renders with example headers: CrossIcon props 1`] = `{}`;

exports[`ContentPage .Markup <PassFail> renders with example headers: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <PassFail> renders with example headers: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <PassFail> renders without example headers 1`] = `
<DocumentFragment>
  <div
    class="pass-fail-grid"
  >
    <div
      class="fail-section"
    >
      <div
        class="fail-header"
      >
        <mock-crossicon />
         
        <h3>
          Fail
        </h3>
      </div>
      <p>
        I FAILED :(
      </p>
    </div>
    <div
      class="fail-example"
    >
      <div
        class="code-example"
      >
        <div
          class="code-example-code"
        >
          <div
            class="insights-code"
          >
            This is the failure 
            <span
              class="highlight"
            >
              example
            </span>
            .
          </div>
        </div>
      </div>
    </div>
    <div
      class="pass-section"
    >
      <div
        class="pass-header"
      >
        <mock-checkicon />
         
        <h3>
          Pass
        </h3>
      </div>
      <p>
        I PASSED!
      </p>
    </div>
    <div
      class="pass-example"
    >
      <div
        class="code-example"
      >
        <div
          class="code-example-code"
        >
          <div
            class="insights-code"
          >
            This is the passing 
            <span
              class="highlight"
            >
              example
            </span>
            .
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContentPage .Markup <PassFail> renders without example headers: CheckIcon props 1`] = `{}`;

exports[`ContentPage .Markup <PassFail> renders without example headers: CrossIcon props 1`] = `{}`;

exports[`ContentPage .Markup <PassFail> renders without example headers: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <PassFail> renders without example headers: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <ProblemList> renders 1`] = `
<DocumentFragment>
  <ul
    class="accessibility-problems-list"
  >
    list content
  </ul>
</DocumentFragment>
`;

exports[`ContentPage .Markup <ProblemList> renders: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <ProblemList> renders: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <ProblemList> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <ProblemList> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Table> renders 1`] = `
<DocumentFragment>
  <ul
    class="table"
  >
    table content
  </ul>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Table> renders: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Table> renders: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Table> renders: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Table> renders: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where options not specified 1`] = `
<DocumentFragment>
  <h1>
    TEST
  </h1>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Title> renders where options not specified: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where options not specified: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where options not specified: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where options not specified: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === false 1`] = `
<DocumentFragment>
  <h1>
    TEST
  </h1>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === false: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === false: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === false: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === false: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === null 1`] = `
<DocumentFragment>
  <h1>
    TEST
  </h1>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === null: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === null: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === null: HelmetWrapper props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === null: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === true 1`] = `
<DocumentFragment>
  <mock-helmetwrapper
    defer="true"
    encodespecialcharacters="true"
  >
    <title>
      TEST - THE_APPLICATION_TITLE
    </title>
  </mock-helmetwrapper>
  <h1>
    TEST
  </h1>
</DocumentFragment>
`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === true: CheckIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === true: CrossIcon props 1`] = `undefined`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === true: HelmetWrapper props 1`] = `
{
  "children": <title>
    TEST
     - 
    THE_APPLICATION_TITLE
  </title>,
  "defer": true,
  "encodeSpecialCharacters": true,
}
`;

exports[`ContentPage .Markup <Title> renders where setPageTitle === true: NewTabLink props 1`] = `undefined`;
